--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<head>
+<meta charset="UTF-8">
+</head>
 <html>
 <body>
-<h1>ÕâÊÇÕÅÄ¾ÆÚÊ¹ÓÃgithub pages´î½¨µÄ¸öÈËÕ¾µã¡£</h1>
+<h1>è¿™æ˜¯å¼ æœ¨æœŸä½¿ç”¨github pagesæ­å»ºçš„ä¸ªäººç«™ç‚¹ã€‚</h1>
 </body>
 </html>
