--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <span class="zhishi zhishi_3"></span>
             </p>
             <p>
-            	<span class="yue_info yue_1"><i>:18352862238</i></span>
+            	<span class="yue_info yue_1"><i>:简历中。。。</i></span>
             </p>
             <p>
             	<span class="yue_info yue_2"><i>:nanshenstudy@163.com</i></span>
