--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                                 <img src="images/eq/case.jpg" width="248" height="160">
 
                                 <p class="case_info">
-                                    <span>仿造购物商城</span>
-                                    <span>参与：设计、前端</span>
+                                    <span>仿造购物车案例</span>
+                                    <span>体会纯CSS3和HTML5动画</span>
                                 </p> 
                                </a>
                             </li>
