--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </ul>
                     </div>
                 </div>
-                <h1 style="color: pink;font-size: 40px">更多案例展示在详细简历中。。。。</h1>
+                <h1 style="color: pink;font-size: 40px">更多案例展示在详细简历中。。。</h1>
                 <div class="tips" id="js_tips">
                 	<span class="focus"></span>
                     <span></span>
@@ -175,6 +175,7 @@
         	<p class="mb30">
             	<span class="img_bg2 title_jn title_yue"></span>
             </p>
+              <h1 style="color: pink;font-size: 20px">另外张木期并不是我真实姓名哈，详细资料都在简历中。。。</h1>
             <p>
                 	<span class="zhishi zhishi_1"></span>
                 </p>
