--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                 <div class="txt_intro">
                 	<p>前端行业更新太快，目前还在不断的学习，离大神之路还很遥远</p>
                     <p>有代码洁癖，所以我的HTML是干净整洁规范的,情怀敲代码</p>
-                    <p>也正在学各种框架，Vue,React,BootStrap都用来写过案例</p>
+                     <p>了解java,php等服务端语言， 熟悉HTML5 Canvas 、离线缓存和本地储存技术对后台 nodejs+MySql+express 的服务器搭建,并熟悉 Ajax 后台的异步刷新</p>
+                     <p>  熟悉 Git Webpack Gulp 等开发工具</p>
+                    <p>了解Vue,React,BootStrap都用来写过案例</p>
                     </div>
             </div>
         </div>
@@ -195,7 +197,7 @@
                 
             </p>
             <p>
-            	<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=619448091&site=qq&menu=yes" class="yue_info yue_3"><i>:61944801<span>（点击马上约）</span></i></a>
+            	<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3402152977&site=qq&menu=yes" class="yue_info yue_3"><i>:3402152977<span>（点击马上约）</span></i></a>
             </p>
         </div>
     </div>
