--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li data-menuanchor="page2"><a href="#page2">技能</a></li>
                 <li data-menuanchor="page3"><a href="#page3">案例作品</a></li>
                 <li data-menuanchor="page4"><a href="#page4">联系方式</a></li>
+                <li ><a href="https://liefgeni.github.io/Resume/dist/index.html">详细简历</a></li>
             </ul>
         </div>
     </div>
@@ -179,6 +180,7 @@
             </p>
               <h1 style="color: pink;font-size: 20px">另外张木期并不是我真实姓名哈，详细资料都在简历中。。。</h1>
             <p>
+
                 	<span class="zhishi zhishi_1"></span>
                 </p>
             <p>
@@ -188,7 +190,7 @@
                 <span class="zhishi zhishi_3"></span>
             </p>
             <p>
-            	<span class="yue_info yue_1"><i>:简历中。。。</i></span>
+            	<span class="yue_info yue_1" ><i>：详细简历中</i></span>
             </p>
             <p>
             	<span class="yue_info yue_2"><i>:nanshenstudy@163.com</i></span>
